fixed overflow on mobile

--- a/style.css
+++ b/style.css
@@ -71,15 +71,15 @@ body {
     grid-row: 2;
     height:100vh;
     width:100%;
+    overflow: hidden;
     color: #f1f1f1;
-    font-size: 10px;
+    font-size: 1vw;
     font-family: 'IM Fell English SC', serif;
     /* text-shadow: 2px 1px #333333; */
     background-image: url(./images/trinity.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    overflow-y: scroll;
     /* background-image: url(../checkpoint2/images/water.jpg); */
 }
 .item3 {
@@ -94,6 +94,7 @@ body {
     justify-items:center;
     justify-content: center;
     text-align: center;
+
 
 }
 .item4 {
